clients/assets/styles/sender.css
html, body {
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Roboto', sans-serif;
  background-color: #FAFAFA;
}

p {
  margin-bottom: 0;
}

.body-primary {
  position: fixed;
  z-index: -1;
  height: 25%;
  width: 100%;
  color: #FFFFFF;
  background-color: #E74C3C;
}

.body-primary h1 {
  color: #fff;
  margin-top: 7%;
  font-size: 3em;
  font-weight: lighter;
}

.auth .mdl-card {
  width: 100%;
}

.auth .mdl-card__title {
  padding: 30px 0 0 30px;
}

.auth .mdl-card__title-text {
  font-size: 2em;
  color: #757575;
}

.auth .mdl-card__supporting-text {
  padding: 20px 30px;
  width: 100%;
}

.auth .mdl-textfield {
  display: block;
  width: 100%;
}

.auth .warning {
  height: 30px;
  line-height: 30px;
  font-size: 1.5em;
  color: #FF8F00;
}

.auth .mdl-card__actions {
  display: flex;
  justify-content: space-between;
  padding: 15px;
}

.card-deck {
  width: 100%;
  /*margin-top: 20%;*/
  min-height: 100px;
}

.col-xs-12 .card-deck {
  margin-top: 20px;
}

.card-deck .mdl-card__title {
  padding: 30px 0 0 30px;
}

.card-deck .mdl-card__title-text {
  font-size: 2em;
  color: #757575;
}

.card-deck button,
.card-deck .mdl-button {
  margin-left: 15px;
}

.card-deck .mdl-card__supporting-text {
  padding: 30px;
  font-size: 1em;
}

.card {
  margin-top: 20px;
  min-height: 0;
  width: 100%;
}

.card .mdl-card__supporting-text {
  font-size: 1em;
}

.card .mdl-card__actions {
  display: flex;
  justify-content: flex-end;
}

.card .mdl-button {
  margin-left: 10px;
}

.deck-footer {
  height: 100px;
}

.add-card {
  position: fixed;
  bottom: 50px;
  right: 50px;
  z-index: 2;
}

.popup {
  position: fixed;
  z-index: 3;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #FFF;
}

.popup .mdl-card {
  background-color: #FFF;
}

.popup .mdl-card__supporting-text {
  font-size: 1em;
}

.popup .mdl-card__actions {
  display: flex;
  justify-content: space-between;
}

.new-card-info .mdl-card {
  width: 100%;
  margin-top: 13%;
  min-height: 0;
}

.new-card .mdl-card,
.card-preview .mdl-card {
  margin-top: 20px;
}

.new-card .mdl-card {
  width: 100%;
  height: 350px;
}

.new-card form {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}

.new-card .mdl-card__title {
  padding: 30px 0 0 30px;
}

.new-card .mdl-card__supporting-text {
  width: 100%;
  height: 85%;
  padding: 10px 30px;
}

.new-card .text-area {
  height: calc(100% - 70px);
}

.new-card textarea {
  height: 100%;
}

.new-card .mdl-card__supporting-text p {
  margin-bottom: 0;
}

.new-card .mdl-textfield {
  width: 100%;
}

.new-card .mdl-card__actions {
  display: flex;
  justify-content: flex-end;
}

.new-card .mdl-card__actions .mdl-button {
  margin-left: 10px;
}
.card-preview .mdl-card {
  width: 100%;
}

p {
  margin-bottom: 0;
}

/* Projector */

.projector  {
  font-family: 'Roboto', sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  zoom: 1.3;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

.canvas {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  background-color: #ff5252;
  color: #fff;
}

.canvas img {
  display: block;
  width: 80%;
  height: auto;
  border: none;
  margin: 0 auto;
}

